Cambio en el proyecto 1

--- a/index.html
+++ b/index.html
@@ -357,12 +357,12 @@
                     </div>
                 </div>
             </div>
-            <p>En este proyecto se analizó los datos de las importaciones a través de la implementación de dos modelos, uno de clustering, el cual 
+            <p>En este proyecto se analizó los datos de las importaciones en Python a través de la implementación de dos modelos, uno de clustering, el cual 
                 permite estimar grupos de importadores para evaluar su estrategia por segmento y el otro de forecast, con el cual se pronostica 
                 las importaciones a tres meses. Los resultados del método de clustering indica que se puede dividir los datos en tres grupos de 
                 acuerdo con la cantidad de productos importados, importadores de demanda alta, media y baja, de estos tres grupos la estrategia 
                 del importador de demanda alta es la que minimiza costos y tiempos de legalización, en el caso del método de forecast, se determinó 
-                un crecimiento en las importaciones en el próximo mes, el sofware utilizado fue Python.
+                un crecimiento en las importaciones en el próximo mes.
             </p>
         </div>
     </section>
