--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+        integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portafolio</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
     <!-- MENU ENCABEZADO -->
     <div class="contenedor-header">
@@ -41,9 +45,11 @@
             <h1>JOSE LUIS ROMERO CAPA</h1>
             <h2>Economista - Especialista en Business Intelligence</h2>
             <div class="redes">
-                <a href="https://www.facebook.com/joseluis.romero.1614?locale=es_LA" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.facebook.com/joseluis.romero.1614?locale=es_LA" target="_blank"><i
+                        class="fa-brands fa-facebook-f"></i></a>
                 <a href="https://x.com/JoseL_RomeroC" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                <a href="https://www.linkedin.com/in/jos%C3%A9-luis-romero-capa-691740167/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/jos%C3%A9-luis-romero-capa-691740167/" target="_blank"><i
+                        class="fa-brands fa-linkedin-in"></i></a>
             </div>
         </div>
     </section>
@@ -52,12 +58,17 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy José Luis Romero.</span> economista de profesión, me especializo en el análisis de datos, 
-                actualmente laboro para una empresa de producción y comercialización de berries de exportación. Me apasiona transformar
-                datos en información valiosa, optimizando procesos y detectando patrones clave. A través de la automatización y el uso
-                eficiente de herramientas de análisis, facilito la gestión diaria de asistencia y horas trabajadas, mejorando la precisión y
-                reduciendo el tiempo en la elaboración de reportes. Gracias a mi enfoque estratégico y tecnológico, la empresa ha logrado
-                incrementar su eficiencia, sustituyendo procesos manuales por soluciones automatizadas que ahorran tiempo y recursos.</p>
+            <p><span>Hola, soy José Luis Romero.</span> economista de profesión, me especializo en el análisis de datos,
+                actualmente laboro para una empresa de producción y comercialización de berries de exportación. Me
+                apasiona transformar
+                datos en información valiosa, optimizando procesos y detectando patrones clave. A través de la
+                automatización y el uso
+                eficiente de herramientas de análisis, facilito la gestión diaria de asistencia y horas trabajadas,
+                mejorando la precisión y
+                reduciendo el tiempo en la elaboración de reportes. Gracias a mi enfoque estratégico y tecnológico, la
+                empresa ha logrado
+                incrementar su eficiencia, sustituyendo procesos manuales por soluciones automatizadas que ahorran
+                tiempo y recursos.</p>
 
             <div class="fila">
                 <!-- datos personales -->
@@ -131,10 +142,10 @@
                 </div>
             </div>
             <a href="pdf/CV.pdf" target="_blank" download="Mi_CV">
-            <button>
-                Descargar CV <i class="fa-solid fa-download"></i>
-                <span class="overlay"></span>
-            </button>
+                <button>
+                    Descargar CV <i class="fa-solid fa-download"></i>
+                    <span class="overlay"></span>
+                </button>
             </a>
         </div>
     </section>
@@ -273,10 +284,11 @@
                             <li>Curso COMO LIDEARA PERSONAS Dictado por Harvard ManageMentor</li>
                             <li>Curso TOMA DE DECICIONES Dictado por Harvard ManageMentor</li>
                             <li>ANÁLISIS Y PROCESAMIENTO DE BASES DE DATOS CENSALES CON REDATAM PARA LA TOMA
-                                DE DECISIONES, dictado por el Instituto Nacional de Estadísticas y Censos, Universidad Técnica
+                                DE DECISIONES, dictado por el Instituto Nacional de Estadísticas y Censos, Universidad
+                                Técnica
                                 Particular de Loja y la Secretaría de Planificación y Desarrollo.</li>
                             <li>Programa Universitario Avanzado en desarrollo de competencias clave para la empresa con
-                            recursos Harvard ManageMentor en coordinacion con la UNIR.</li>
+                                recursos Harvard ManageMentor en coordinacion con la UNIR.</li>
                         </ul>
                         <div class="conectori">
                             <div class="circuloi"></div>
@@ -289,7 +301,7 @@
                     <div class="item der">
                         <h4>Analista</h4>
                         <span class="casa">Plannning & Solution S.A.</span>
-                        <span class="fecha">2005 - 2008</span>
+                        <span class="fecha">2020 - 2021</span>
                         <ul>
                             <li>Busqueda y recopilación de datos</li>
                             <li>Limpieza y tratamiento de datos</li>
@@ -303,7 +315,7 @@
                     <div class="item der">
                         <h4>Supervisor de covertura censal</h4>
                         <span class="casa">Nombre de Compañía</span>
-                        <span class="fecha">2005 - 2008</span>
+                        <span class="fecha">2022 - 2023</span>
                         <ul>
                             <li>Capacitación de metodología censal</li>
                             <li>Supervisión de recopilación de datos censales</li>
@@ -317,7 +329,7 @@
                     <div class="item der">
                         <h4>Asistente de compensaciones</h4>
                         <span class="casa">SIGLO BPO</span>
-                        <span class="fecha">2005 - 2008</span>
+                        <span class="fecha">2023 - Actualidad</span>
                         <ul>
                             <li>Automatización de reportes en Excel y Power BI</li>
                             <li>Consultas SQL</li>
@@ -343,17 +355,42 @@
                     <img src="img/p1.png" alt="">
                     <div class="overlay">
                         <h3>ETL y Análisis de Datos</h3>
-                        <p>Python y Power BI</p>       
+                        <p>Python y Power BI</p>
                     </div>
                     <div class="descripción">
                         <h3>ETL y Análisis de Datos</h3>
-                        <p>Resumen: En este proyecto se tiene como objetivo principal la creación de un sistema de visualización de datos para una empresa de exportación de Berries, utilizando SQL Server como base de datos y herramientas de visualización como Power BI. Se pudo seguir varios pasos para lograr este objetivo, incluyendo la limpieza de los datos, creación de la base de datos, carga de los datasets correspondientes, la ejecución de consultas para obtener información clave y la generación de visualizaciones relevantes para el personal del hospital.</p>
+                        <p>Resumen: En este proyecto se tiene como objetivo principal la creación de un sistema de
+                            visualización de datos para una empresa de exportación de Berries, utilizando SQL Server
+                            como base de datos y herramientas de visualización como Power BI. Se pudo seguir varios
+                            pasos para lograr este objetivo, incluyendo la limpieza de los datos, creación de la base de
+                            datos, carga de los datasets correspondientes, la ejecución de consultas para obtener
+                            información clave y la generación de visualizaciones relevantes para el personal del
+                            hospital.</p>
                         <br>
-                        <a href="https://ppluis84.github.io/proyecto1/" target="_blank" class="enlace-proyecto-1">Leer más..</a>
+                        <a href="https://ppluis84.github.io/proyecto1/" class="enlace-proyecto-1">Leer
+                            más..</a>
                     </div>
                     <br>
                 </div>
                 <hr>
+                <div class="proyecto">
+                    <img src="img/p6.png" alt="">
+                    <div class="overlay">
+                        <h3>ETL y Análisis de Datos</h3>
+                        <p>Python y Power BI</p>
+                    </div>
+                    <div class="descripción">
+                        <h3>ETL y Análisis de Datos</h3>
+                        <p>Resumen: Este proyecto es un modelo de segementación de una base de datos de clientes 
+                            de un negocio de retailer, el modelo de negocio gira en torno a la venta de biciclétas, 
+                            el objetivo es ayudar a mejorar sus resultados desarrollando sus diferentes tipologías 
+                            de clientes en un modelo Life Time Value.</p>
+                        <br>
+                        <a href="https://ppluis84.github.io/Life-time-value/" class="enlace-proyecto-1">Leer
+                            más..</a>
+                    </div>
+                    <br>
+                </div>                
                 <br>
             </div>
         </div>
@@ -387,7 +424,7 @@
                             </li>
                             <li>
                                 <i class="fa-solid fa-mobile-screen"></i>
-                                +593 99 33 81149 
+                                +593 99 33 81149
                             </li>
                             <li>
                                 <i class="fa-solid fa-envelope"></i>
@@ -406,12 +443,15 @@
             <i class="fa-solid fa-angles-up"></i>
         </a>
         <div class="redes">
-            <a href="https://www.facebook.com/joseluis.romero.1614?locale=es_LA" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com/joseluis.romero.1614?locale=es_LA" target="_blank"><i
+                    class="fa-brands fa-facebook-f"></i></a>
             <a href="https://x.com/JoseL_RomeroC" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://www.linkedin.com/in/jos%C3%A9-luis-romero-capa-691740167/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/jos%C3%A9-luis-romero-capa-691740167/" target="_blank"><i
+                    class="fa-brands fa-linkedin-in"></i></a>
         </div>
-</footer>
+    </footer>
 
     <script src="script.js"></script>
 </body>
+
 </html>
