--- a/index.html
+++ b/index.html
@@ -45,11 +45,14 @@
             <h1>JOSE LUIS ROMERO CAPA</h1>
             <h2>Economista - Especialista en Business Intelligence</h2>
             <div class="redes">
-                <a href="https://www.facebook.com/joseluis.romero.1614?locale=es_LA" target="_blank"><i
-                        class="fa-brands fa-facebook-f"></i></a>
-                <a href="https://x.com/JoseL_RomeroC" target="_blank"><i class="fa-brands fa-twitter"></i></a>
                 <a href="https://www.linkedin.com/in/jos%C3%A9-luis-romero-capa-691740167/" target="_blank"><i
-                        class="fa-brands fa-linkedin-in"></i></a>
+                    class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/ppluis84" target="_blank"><i
+                    class="fa-brands fa-github"></i></a>
+                <a href="https://www.facebook.com/joseluis.romero.1614?locale=es_LA" target="_blank"><i
+                    class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://x.com/JoseL_RomeroC" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
             </div>
         </div>
     </section>
@@ -443,11 +446,13 @@
             <i class="fa-solid fa-angles-up"></i>
         </a>
         <div class="redes">
+            <a href="https://www.linkedin.com/in/jos%C3%A9-luis-romero-capa-691740167/" target="_blank"><i
+                    class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://github.com/ppluis84" target="_blank"><i
+                    class="fa-brands fa-github"></i></a>
             <a href="https://www.facebook.com/joseluis.romero.1614?locale=es_LA" target="_blank"><i
                     class="fa-brands fa-facebook-f"></i></a>
             <a href="https://x.com/JoseL_RomeroC" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://www.linkedin.com/in/jos%C3%A9-luis-romero-capa-691740167/" target="_blank"><i
-                    class="fa-brands fa-linkedin-in"></i></a>
         </div>
     </footer>
 
