links en las descripciones de las imagenes

--- a/index.html
+++ b/index.html
@@ -357,8 +357,10 @@
                 <div class="proyecto">
                     <img src="img/p1.png" alt="">
                     <div class="overlay">
+                        <a href="https://ppluis84.github.io/proyecto1/">
                         <h3>ETL y Análisis de Datos</h3>
                         <p>Python y Power BI</p>
+                        </a>
                     </div>
                     <div class="descripción">
                         <h3>ETL y Análisis de Datos</h3>
@@ -379,15 +381,17 @@
                 <div class="proyecto">
                     <img src="img/p6.png" alt="">
                     <div class="overlay">
-                        <h3>ETL y Análisis de Datos</h3>
+                        <a href="https://ppluis84.github.io/Life-time-value/">
+                        <h3>Modelo Life Time Value (Python)</h3>
                         <p>Python y Power BI</p>
+                        </a>
                     </div>
                     <div class="descripción">
-                        <h3>ETL y Análisis de Datos</h3>
-                        <p>Resumen: Este proyecto es un modelo de segementación de una base de datos de clientes 
-                            de un negocio de retailer, el modelo de negocio gira en torno a la venta de biciclétas, 
-                            el objetivo es ayudar a mejorar sus resultados desarrollando sus diferentes tipologías 
-                            de clientes en un modelo Life Time Value.</p>
+                        <h3>Modelo Life Time Value (Python)</h3>
+                        <p>Resumen: Este proyecto es un modelo de segmentación de una base de datos de clientes 
+                            de un negocio de retailer, el modelo de negocio gira en torno a la venta de bicicletas, 
+                            y accesorios, el objetivo es ayudar a mejorar sus resultados identificando las 
+                            tipologías de clientes en un modelo Life Time Value.</p>
                         <br>
                         <a href="https://ppluis84.github.io/Life-time-value/" class="enlace-proyecto-1">Leer
                             más..</a>
