logo lleva al inicio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="contenedor-header">
         <header>
             <div class="logo">
-                <a href="#">José Luis</a>
+                <a href="#inicio">José Luis</a>
             </div>
             <nav id="nav">
                 <ul>
