Nuevo proyecto agregado

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                     <div class="overlay">
                         <a href="https://ppluis84.github.io/proyecto1/">
                         <h3>ETL y Análisis de Datos</h3>
-                        <p>Python y Power BI</p>
+                        <p>Excel, SQL, Power BI</p>
                         </a>
                     </div>
                     <div class="descripción">
@@ -372,18 +372,18 @@
                             información clave y la generación de visualizaciones relevantes para el personal del
                             hospital.</p>
                         <br>
-                        <a href="https://ppluis84.github.io/proyecto1/" class="enlace-proyecto-1">Leer
-                            más..</a>
+                        <a href="https://ppluis84.github.io/proyecto1/" class="enlace-proyecto-1">Leer más..</a>
                     </div>
                     <br>
                 </div>
                 <hr>
+                <br>
                 <div class="proyecto">
                     <img src="img/p6.png" alt="">
                     <div class="overlay">
                         <a href="https://ppluis84.github.io/Life-time-value/">
                         <h3>Modelo Life Time Value (Python)</h3>
-                        <p>Python y Power BI</p>
+                        <p>Python</p>
                         </a>
                     </div>
                     <div class="descripción">
@@ -397,7 +397,30 @@
                             más..</a>
                     </div>
                     <br>
-                </div>                
+                </div>
+                <hr>
+                <br>
+                <div class="proyecto">
+                    <img src="img/mi_codigo_qr.png" alt="">
+                    <div class="overlay">
+                        <a href="https://ppluis84.github.io/Life-time-value/">
+                            <h3>Generación de un codigo QR para una dirección web (Python)</h3>
+                            <p>Python</p>
+                        </a>
+                    </div>
+                    <div class="descripción">
+                        <h3>Generación de un codigo QR para una dirección web (Python)</h3>
+                        <p>Resumen: Este proyecto tiene como objetivo desarrollar una herramienta digital que permita a los usuarios
+                            generar códigos QR de manera rápida y sencilla a partir de cualquier enlace web. Ademas de facilitar la
+                            creación y distribución de contenido digital, optimizando la experiencia del usuario y aumentando la
+                            interacción con el mismo. Finalmente promover el uso de códigos QR como una herramienta eficaz de marketing
+                            y comunicación, ampliando las posibilidades de interacción entre marcas y consumidores.</p>
+                        <br>
+                        <a href="https://ppluis84.github.io/Codigo-qr/" class="enlace-proyecto-1">Leer
+                            más..</a>
+                    </div>
+                    <br>
+                </div>
                 <br>
             </div>
         </div>
