Cambios en curruculum

--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@
                         </div>
                     </div>
                     <div class="item izq">
-                        <h4>Cursos</h4>
-                        <span class="casa">Universidad de Oxford</span>
-                        <span class="fecha">2005 - 2008</span>
+                        <h4>Educación no formal</h4>
+                        <span class="casa">Cursos y certificaciones</span>
+                        <span class="fecha">2008 - 2024</span>
                         <ul>
                             <li>Curso de FINDER, Dictado por la fundacion Carlos Slim</li>
                             <li>Curso de CURADOR DE DATOS Dictado por la fundacion Carlos Slim</li>
@@ -317,7 +317,7 @@
                     </div>
                     <div class="item der">
                         <h4>Supervisor de covertura censal</h4>
-                        <span class="casa">Nombre de Compañía</span>
+                        <span class="casa">INEC</span>
                         <span class="fecha">2022 - 2023</span>
                         <ul>
                             <li>Capacitación de metodología censal</li>
