Cambio en experiencia

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <ul>
                         <li>
                             <strong>Cumpleaños</strong>
-                            15-01-1980
+                            31-12-1984
                         </li>
                         <li>
                             <strong>Teléfono</strong>
@@ -270,7 +270,7 @@
                         <h4>Inteligencia de Negocios</h4>
                         <span class="casa">Universidad Internacional de la Rioja</span>
                         <span class="fecha">2023 - 2024</span>
-                        <p>Número de registro en la SENESCYT 1008-2021-2269524</p>
+                        <p>Número de registro en la SENESCYT 7241250340</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
@@ -302,14 +302,24 @@
                 <div class="col derecha">
                     <h3>Experiencia de trabajo</h3>
                     <div class="item der">
-                        <h4>Analista</h4>
-                        <span class="casa">Plannning & Solution S.A.</span>
-                        <span class="fecha">2020 - 2021</span>
+                        <h4>Contratista</h4>
+                        <span class="casa">GAD Chaguarpamba</span>
+                        <span class="fecha">Enero 2020 - Diciembre 2020</span>
                         <ul>
-                            <li>Busqueda y recopilación de datos</li>
-                            <li>Limpieza y tratamiento de datos</li>
-                            <li>Construcción e interpretación de indicadores</li>
-                            <li>Redacción de informes</li>
+                            <li>Actualización y elaboración del Plan de Desarrollo y Ordenamiento territorial y Formulación del Plan de Uso y Gestión de Suelo del cantón Chaguarpamba.</li>
+                            <li>Monto del contrato 68,250.00</li>
+                        </ul>
+                        <div class="conectord">
+                            <div class="circulod"></div>
+                        </div>
+                    </div>
+                    <div class="item der">
+                        <h4>Contratista</h4>
+                        <span class="casa">Prefectura de Loja</span>
+                        <span class="fecha">Agosto 2020 - Febrero 2021</span>
+                        <ul>
+                            <li>Elaboración de planes de negocios para los sistemas de riego públicos: El Ingenio y El Áiro del cantón Espíndola y El Tablón y La Papaya del cantón Saraguro.</li>
+                            <li>Monto del contrato 48.000,00</li>
                         </ul>
                         <div class="conectord">
                             <div class="circulod"></div>
