--- a/index.html
+++ b/index.html
@@ -431,6 +431,27 @@
                     </div>
                     <br>
                 </div>
+                <hr>
+                <br>
+                <div class="proyecto">
+                    <img src="img/webscraping1.png" alt="">
+                    <div class="overlay">
+                        <a href="https://ppluis84.github.io/WebScraping/">
+                            <h3>Bot para la extracción de datos de la web (Python - Web Scraping)</h3>
+                            <p>Python</p>
+                        </a>
+                    </div>
+                    <div class="descripción">
+                        <h3>Bot para la extracción de datos de la web (Python - Web Scraping)</h3>
+                        <p>Resumen: El objetivo de este proyecto es utilizar el método web scraping para la 
+                            extracción de datos de la web, la librería utilizada es selenium de Python..</p>
+                        <br>
+                        <a href="https://ppluis84.github.io/WebScraping/" class="enlace-proyecto-1">Leer
+                            más..</a>
+                    </div>
+                    <br>
+                </div>
+                <hr>
                 <br>
             </div>
         </div>
